2009-06-05  Eric Seidel  <eric@webkit.org>

        Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=25922
        Fix dropEffect = "none" to work as expected.

        * fast/events/drag-to-navigate-expected.txt: Copied from LayoutTests/editing/selection/doubleclick-whitespace-img-crash-expected.txt.
        * fast/events/drag-to-navigate.html: Added.
        * fast/events/prevent-drag-to-navigate-expected.txt: Copied from LayoutTests/editing/selection/doubleclick-whitespace-img-crash-expected.txt.
        * fast/events/prevent-drag-to-navigate.html: Added.
        * fast/events/resources/file-for-drag-to-navigate.html: Added.
        * fast/events/resources/file-for-prevent-drag-to-navigate.html: Added.

2009-06-23  Oliver Hunt  <oliver@apple.com>

        Reviewed by NOBODY (missed a file).

        Add expected results for test i landed earlier

        * fast/js/dictionary-no-cache-expected.txt: Added.

2009-06-23  Oliver Hunt  <oliver@apple.com> and Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Sam Weinig and Dave Hyatt.

        <rdar://problem/6164797> Add Canvas API to allow drawing of <video> frames
        <https://bugs.webkit.org/show_bug.cgi?id=25920>

        Add tests for drawing a video to the canvas element.

        * media/video-canvas-expected.txt: Added.
        * media/video-canvas.html: Added.

2009-06-23  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        <rdar://problem/6992806> REGRESSION: Enumeration can skip new properties in cases of prototypes that have more than 64 (26593)
        <https://bugs.webkit.org/show_bug.cgi?id=26593>

        Add tests to ensure we correctly invalidate caching that depends on structure chains
        that include dictionaries.

        * fast/js/dictionary-no-cache.html: Added.
        * fast/js/dictionary-no-cache-expected.txt: Added.
        * fast/js/resources/dictionary-no-cache.js: Added.

2009-06-23  Ojan Vafai  <ojan@chromium.org>
